stockMsaStock/src/main/java/com/example/stockmsastock/common/error/ResponseMessage.java
package com.example.stockmsastock.common.error;

public interface ResponseMessage {
    String SUCCESS = "Success.";
    String VALIDATION_FAIL = "Validation fail";
    String CERTIFICATION_FAIL = "Certification failed.";
    String DATABASE_ERROR = "Database Error.";
    String INTERNAL_ERROR = "Internal Server Error";

}
